--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  carousel_slider: ^4.1.1  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,6 +41,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  video_player: ^2.4.6
+  chewie: ^1.3.5
+  # get: ^4.6.5
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -63,6 +67,16 @@ flutter:
   assets:
     - assets/images/profile.png
     - assets/images/luck.jpeg
+    - assets/images/diamond.png
+    - assets/images/card-person1.jpg
+    - assets/images/card-person2.jpg
+    - assets/images/card-person3.jpg
+    - assets/images/card-person4.jpg
+    - assets/images/rupee.png
+    - assets/images/rupee1.png
+    - assets/images/star.png
+    - assets/images/user.png
+    - assets/images/clock.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
